--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,14 +16,14 @@ android {
         }
     }
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "rs.tafilovic.mojesdnevnik"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 14
-        versionName "1.1.4"
+        versionCode 16
+        versionName "1.1.6"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -55,16 +55,16 @@ android {
 dependencies {
     def dagger_version = '2.29.1'
     def paging_version = "2.1.2"
-    def coroutines_version = "1.3.7"
+    def coroutines_version = "1.3.8"
     def lifecycle_version = "2.2.0"
     def multidex_version = "2.0.1"
 
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.21"
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     // Kotlin extensions
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -97,7 +97,7 @@ dependencies {
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     // For control over item selection of both touch and mouse driven selection
-    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0-rc03'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
 
     // CardView
     implementation "androidx.cardview:cardview:1.0.0"
@@ -117,14 +117,16 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.13.1'
 
     // Recommended: Add the Firebase SDK for Google Analytics.
-    implementation 'com.google.firebase:firebase-analytics-ktx:17.5.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx:18.0.2'
 
     // Add the Firebase Crashlytics SDK.
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
 
+    // Preference Manager (AndroidX)
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
