--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,15 +15,15 @@ android {
             keyPassword 'seki1seki'
         }
     }
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 33
+    buildToolsVersion "33.0.0"
 
     defaultConfig {
         applicationId "rs.tafilovic.mojesdnevnik"
         minSdkVersion 19
-        targetSdkVersion 31
-        versionCode 19
-        versionName "1.1.9"
+        targetSdkVersion 33
+        versionCode 21
+        versionName "1.1.11"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -39,42 +39,45 @@ android {
         }
         debug {
             debuggable true
+            applicationIdSuffix '.debug'
+            versionNameSuffix '(debug)'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_11.toString()
     }
 
     buildFeatures {
         viewBinding true
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
-    }
 }
 
 dependencies {
-    def dagger_version = '2.39.1'
+    def dagger_version = '2.44'
     def paging_version = "2.1.2"
-    def lifecycle_version = "2.4.0"
+    def lifecycle_version = "2.5.1"
     def multidex_version = "2.0.1"
 
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Flex-box
     implementation 'com.google.android:flexbox:2.0.1'
 
     // Kotlin extensions
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.collection:collection-ktx:1.1.0"
-    implementation "androidx.fragment:fragment-ktx:1.4.0"
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation "androidx.collection:collection-ktx:1.2.0"
+    implementation "androidx.fragment:fragment-ktx:1.5.4"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -92,11 +95,11 @@ dependencies {
     //kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     // Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
 
     // Material Components
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.material:material:1.7.0'
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.2.1"
@@ -120,14 +123,15 @@ dependencies {
     // JSOUP HTML Parsing Library
     implementation 'org.jsoup:jsoup:1.14.3'
 
+    implementation platform('com.google.firebase:firebase-bom:31.0.1')
     // Recommended: Add the Firebase SDK for Google Analytics.
-    implementation 'com.google.firebase:firebase-analytics-ktx:20.0.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // Add the Firebase Crashlytics SDK.
-    implementation 'com.google.firebase:firebase-crashlytics:18.2.5'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
     // Preference Manager (AndroidX)
-    implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
