--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,21 +9,21 @@ apply plugin: 'com.google.firebase.crashlytics'
 android {
     signingConfigs {
         release {
-            storeFile file('E:\\Android projects\\Moj esDnevnik\\keystore.jks')
+            storeFile file('D:\\Android projects\\Moj esDnevnik\\keystore.jks')
             storePassword 'seki1seki'
             keyAlias = 'esdnevnik'
             keyPassword 'seki1seki'
         }
     }
     compileSdkVersion 33
-    buildToolsVersion "33.0.0"
+    buildToolsVersion "33.0.2"
 
     defaultConfig {
         applicationId "rs.tafilovic.mojesdnevnik"
         minSdkVersion 19
         targetSdkVersion 33
-        versionCode 21
-        versionName "1.1.11"
+        versionCode 23
+        versionName "1.2.1"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -68,7 +68,7 @@ dependencies {
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Flex-box
@@ -77,7 +77,7 @@ dependencies {
     // Kotlin extensions
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.collection:collection-ktx:1.2.0"
-    implementation "androidx.fragment:fragment-ktx:1.5.4"
+    implementation "androidx.fragment:fragment-ktx:1.5.5"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -99,7 +99,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
 
     // Material Components
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.8.0'
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.2.1"
