--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,15 +15,15 @@ android {
             keyPassword 'seki1seki'
         }
     }
-    compileSdkVersion 33
-    buildToolsVersion "33.0.2"
+    compileSdkVersion = 34
+    buildToolsVersion = "34.0.0"
 
     defaultConfig {
         applicationId "rs.tafilovic.mojesdnevnik"
         minSdkVersion 19
-        targetSdkVersion 33
-        versionCode 23
-        versionName "1.2.1"
+        targetSdkVersion 34
+        versionCode 24
+        versionName "1.2.2"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -45,24 +45,25 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11.toString()
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
 
     buildFeatures {
         viewBinding true
     }
+    namespace 'rs.tafilovic.mojesdnevnik'
 
 }
 
 dependencies {
-    def dagger_version = '2.44'
+    def dagger_version = '2.49'
     def paging_version = "2.1.2"
-    def lifecycle_version = "2.5.1"
+    def lifecycle_version = "2.6.2"
     def multidex_version = "2.0.1"
 
 
@@ -75,9 +76,9 @@ dependencies {
     implementation 'com.google.android:flexbox:2.0.1'
 
     // Kotlin extensions
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation "androidx.collection:collection-ktx:1.2.0"
-    implementation "androidx.fragment:fragment-ktx:1.5.5"
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation "androidx.collection:collection-ktx:1.3.0"
+    implementation "androidx.fragment:fragment-ktx:1.6.2"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -89,20 +90,17 @@ dependencies {
 
     // Dagger2
     implementation "com.google.dagger:dagger:$dagger_version"
-    //implementation "com.google.dagger:dagger-android:$dagger_version"
-    //implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    //kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     // Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
 
     // Material Components
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.10.0'
 
     // RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
     // For control over item selection of both touch and mouse driven selection
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
 
@@ -118,12 +116,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // OkHttp
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
 
     // JSOUP HTML Parsing Library
-    implementation 'org.jsoup:jsoup:1.14.3'
+    implementation 'org.jsoup:jsoup:1.17.1'
 
-    implementation platform('com.google.firebase:firebase-bom:31.0.1')
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
     // Recommended: Add the Firebase SDK for Google Analytics.
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
@@ -131,10 +129,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
     // Preference Manager (AndroidX)
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
