--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,15 +15,15 @@ android {
             keyPassword 'seki1seki'
         }
     }
-    compileSdkVersion = 34
-    buildToolsVersion = "34.0.0"
+    compileSdkVersion = 35
+    buildToolsVersion = "35.0.0"
 
     defaultConfig {
         applicationId "rs.tafilovic.mojesdnevnik"
-        minSdkVersion 19
-        targetSdkVersion 34
-        versionCode 24
-        versionName "1.2.2"
+        minSdkVersion 21
+        targetSdkVersion 35
+        versionCode 25
+        versionName "1.2.3"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -54,6 +54,7 @@ android {
     }
 
     buildFeatures {
+        buildConfig true
         viewBinding true
     }
     namespace 'rs.tafilovic.mojesdnevnik'
@@ -63,22 +64,22 @@ android {
 dependencies {
     def dagger_version = '2.49'
     def paging_version = "2.1.2"
-    def lifecycle_version = "2.6.2"
+    def lifecycle_version = "2.8.6"
     def multidex_version = "2.0.1"
 
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Flex-box
-    implementation 'com.google.android:flexbox:2.0.1'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     // Kotlin extensions
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation "androidx.collection:collection-ktx:1.3.0"
-    implementation "androidx.fragment:fragment-ktx:1.6.2"
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation "androidx.collection:collection-ktx:1.4.4"
+    implementation "androidx.fragment:fragment-ktx:1.8.4"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -93,11 +94,11 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     // Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
 
     // Material Components
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.12.0'
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.3.2"
@@ -111,9 +112,9 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
     // Retrofit - RESTful
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
 
     // OkHttp
     implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
@@ -121,7 +122,7 @@ dependencies {
     // JSOUP HTML Parsing Library
     implementation 'org.jsoup:jsoup:1.17.1'
 
-    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    implementation platform('com.google.firebase:firebase-bom:33.4.0')
     // Recommended: Add the Firebase SDK for Google Analytics.
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
@@ -133,6 +134,6 @@ dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
